<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="620px"
    android:layout_height="340px"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.fotile.x1i.widget.StyleTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:gravity="center"
        android:text="@string/str_tip"
        android:textColor="@color/white_txt"
        android:textSize="36px" />

    <com.fotile.x1i.widget.StyleTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:gravity="center"
        android:text="@string/str_close_tips"
        android:textColor="@color/white_txt"
        android:textSize="30px" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="76px"
        android:background="@drawable/shape_item_divide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:gravity="center_vertical">

        <com.fotile.x1i.widget.StyleTextView
            android:id="@+id/tv_confirm"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_sure_close"
            android:textColor="@drawable/color_txt_select"
            android:textSize="30px" />
        <View
            android:layout_width="2px"
            android:layout_height="match_parent"
            android:background="@drawable/shape_item_divide_line" />
        <com.fotile.x1i.widget.StyleTextView
            android:id="@+id/tv_cancel"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_cancle"
            android:textColor="@drawable/color_txt_select"
            android:textSize="30px" />
    </LinearLayout>
</LinearLayout>
