<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.fotile.x1i.widget.StyleTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_wifi_ignore"
        android:textSize="30px"
        android:textColor="@color/white_txt"
        android:layout_marginLeft="541px"
        android:layout_marginTop="328px"
        />
    
    <com.fotile.x1i.widget.StyleTextView
        android:id="@+id/tv_ignore_cancle"
        android:layout_width="200px"
        android:layout_height="80px"
        android:layout_marginLeft="381px"
        android:layout_marginTop="640px"
        android:paddingBottom="19px"
        android:paddingLeft="70px"
        android:paddingRight="70px"
        android:paddingTop="19px"
        android:text="@string/str_cancle"
        android:textColor="@drawable/color_txt_select"
        android:textSize="30px"
        android:background="@drawable/grey_btn_background"/>

    <com.fotile.x1i.widget.StyleTextView
        android:id="@+id/tv_ignore_sure"
        android:layout_width="200px"
        android:layout_height="80px"
        android:layout_marginLeft="700px"
        android:layout_marginTop="640px"
        android:paddingBottom="19px"
        android:paddingLeft="70px"
        android:paddingRight="70px"
        android:paddingTop="19px"
        android:text="@string/str_wifi_ignore_confirm"
        android:textColor="@drawable/color_txt_select"
        android:textSize="30px"
        android:background="@drawable/yellow_btn_background"/>


</RelativeLayout>
