<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_internet_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="314px"
        android:src="@mipmap/img_internet_off"
        android:visibility="gone" />


    <com.fotile.music.widget.ThinBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260px"
        android:text="网络异常"
        android:textColor="#FFFFFF"
        android:textSize="36px"

        />

    <com.fotile.music.widget.ThinBoldTextView
        android:id="@+id/tv_music_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40px"
        android:text="@string/network_error"
        android:textColor="@color/white"
        android:textSize="30px" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="192px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Cancle"
            android:layout_width="170px"
            android:layout_height="80px"
            android:background="@drawable/rect_btn_style"
            android:gravity="center"
            android:text="@string/str_cancle"
            android:textColor="@drawable/color_txt_select"
            android:textSize="30px" />

        <TextView
            android:id="@+id/tv_Go"
            android:layout_width="170px"
            android:layout_height="80px"
            android:layout_marginStart="@dimen/px120"
            android:background="@drawable/yellow_btn_background"
            android:gravity="center"
            android:text="@string/str_look"
            android:textColor="@drawable/color_txt_select"
            android:textSize="30px" />
    </LinearLayout>


</LinearLayout>
