<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_pwd"
        android:layout_width="787px"
        android:layout_height="80px"
        android:layout_marginTop="300px"
        android:layout_marginLeft="247px"
        android:background="@drawable/edittext_round_background"
        android:gravity="center_vertical">

        <com.fotile.x1i.widget.RotationLoadingView
            android:id="@+id/loading_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_wifi_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40px"
            android:background="@null"
            android:hint="@string/str_input_hint"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:textColor="@color/white_txt"
            android:textColorHint="#66FFFFFF"
            android:textSize="32px" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_marginTop="260px"
          android:orientation="horizontal">

    <com.fotile.x1i.widget.StyleTextView
        android:id="@+id/tv_cancel"
        android:layout_width="200px"
        android:layout_height="80px"
        android:layout_marginLeft="381px"
        android:paddingBottom="19px"
        android:paddingLeft="70px"
        android:paddingRight="70px"
        android:paddingTop="19px"
        android:text="@string/str_cancle"
        android:textColor="@drawable/color_txt_select"
        android:textSize="30px"
        android:background="@drawable/grey_btn_background"/>

    <com.fotile.x1i.widget.StyleTextView
        android:id="@+id/tv_join"
        android:layout_width="200px"
        android:layout_height="80px"
        android:layout_marginLeft="120px"
        android:paddingBottom="19px"
        android:paddingLeft="70px"
        android:paddingRight="70px"
        android:paddingTop="19px"
        android:text="@string/str_join"
        android:textColor="@drawable/color_txt_select"
        android:textSize="30px"
        android:background="@drawable/yellow_btn_background" />
    </LinearLayout>
</LinearLayout>