<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <!--标题 引导页使用-->
    <com.fotile.x1i.widget.StyleTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100px"
        android:text="语音盒子设置"
        android:visibility="gone"
        android:id="@+id/txt_guide_title"
        android:textColor="#ffffff"
        android:textSize="36px"/>

    <!--连接中（设置和引导模块公用） -->
    <LinearLayout
        android:id="@+id/layout_linkage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="263px"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="200px"
            android:layout_height="80px"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_guid_link_success"
                android:layout_width="@dimen/px40"
                android:layout_height="@dimen/px40"
                android:src="@mipmap/img_link_success"
                android:visibility="gone" />

            <!--<ProgressBar-->
                <!--android:id="@+id/progress_bar"-->
                <!--style="@style/Widget.AppCompat.Loading"-->
                <!--android:layout_width="40px"-->
                <!--android:layout_height="40px"-->
                <!--android:indeterminateTint="#C8AF70"-->
                <!--android:indeterminateTintMode="src_atop"/>-->

            <com.fotile.x1i.widget.RotationLoadingView xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rl_box_link"
                android:layout_width="32dp"
                android:layout_height="31dp"
                custom:icon_drawable="@mipmap/icon_rotation" />

            <com.fotile.x1i.widget.StyleTextView
                android:id="@+id/tv_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25px"
                android:text="开始连接"
                android:textColor="@color/white_txt"
                android:textSize="30px"/>
        </LinearLayout>

        <com.fotile.x1i.widget.StyleTextView
            android:id="@+id/tv_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25px"
            android:text=" (若有wifi连接， 连接过程中wifi将会断开)"
            android:textColor="#9A9A9A"
            android:textSize="26px"
            android:visibility="visible"/>
    </LinearLayout>

    <com.fotile.x1i.widget.StyleTextView
        android:id="@+id/tv_link_cancel"
        android:layout_width="@dimen/px200"
        android:layout_height="@dimen/px80"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/px80"
        android:background="@drawable/shape_button_select"
        android:gravity="center"
        android:text="取消"
        android:textColor="#ffffffff"
        android:textSize="@dimen/px30" />
    <!--连接失败（设置和引导模块公用） -->
    <LinearLayout
        android:id="@+id/layout_linkage_time_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="263px"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <com.fotile.x1i.widget.StyleTextView
            android:id="@+id/txt_fault_ttile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_box_add_overtime"
            android:textColor="@color/white_txt"
            android:textSize="36px"/>

        <com.fotile.x1i.widget.StyleTextView
            android:id="@+id/txt_fault_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:text="@string/str_box_add_overtime_tip"
            android:textColor="@color/white_txt"
            android:textSize="30px"/>

        <LinearLayout
            android:id="@+id/layout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="274px"
            android:orientation="horizontal">

            <com.fotile.x1i.widget.StyleTextView
                android:id="@+id/tv_btn_left"
                android:layout_width="200px"
                android:layout_height="80px"
                android:layout_marginLeft="379px"
                android:background="@drawable/grey_btn_background"
                android:gravity="center"
                android:text="@string/str_sure"
                android:textColor="@drawable/color_txt_select"
                android:textSize="30px"/>

            <com.fotile.x1i.widget.StyleTextView
                android:id="@+id/tv_btn_right"
                android:layout_width="200px"
                android:layout_height="80px"
                android:layout_marginLeft="120px"
                android:background="@drawable/yellow_btn_background"
                android:gravity="center"
                android:text="@string/str_add_again"
                android:textColor="@drawable/color_txt_select"
                android:textSize="30px"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>